<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials</name>
  <version>0.0.0</version>
  <description>The beginner_tutorials package</description>

  <maintainer email="sanskritilabroo@gmail.com">sanskriti</maintainer>
  <license>BSD</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="jane.doe@example.com">Jane Doe</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
